# SteganoGraphyProject

./: .gitignore  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: 00_initialize_project.py  00_validate_config.py  01_validate_dataset.py  02_review_features.py  03_generate_labels.py  04_approve_labels.py  04_inspect_labels.py
src/: __init__.py
src/config/: __init__.py  loader.py  schema.py
src/data/: __init__.py  dataset_validator.py  sliding_window.py
src/features/: __init__.py  context.py  embedding.py  extractors.py  fusion.py  pipeline.py  settings.py  synthetic.py
src/labeling/: __init__.py  generator.py  inspection.py  inspection_settings.py  normalization.py  settings.py  storage.py  visualization.py
src/utils/: __init__.py  hashing.py  paths.py  reproducibility.py
tests/: conftest.py  test_dataset_validator.py  test_feature_fusion.py  test_features.py  test_label_inspection.py  test_label_normalization.py  test_label_storage.py  test_sliding_window.py
